# dcs-bridge

./: CHANGELOG.md  README.md  dcs-bridge.py  dcs-bridge.spec  pre-commit-config.yaml  pre-commit-hooks.yaml  pyproject.toml  requirements.txt  test-server.py
.github/workflows/: latest.yml  release.yml
data/: BridgeExportTemplate.xlsx  IndexedDataTemplate.xlsx
dcsbridge/: __main__.py  services.py
dcsbridge/dataloaders/: __init__.py  combatflite.py  common.py  file.py  scratchpad.py
dcsbridge/drivers/: f16.py
resources/: ExampleScratchpadMissionPlan.txt
resources/aerodromes/: Nevada.csv  Persian Gulf.csv  Syria.csv
src/dcsbridge/: __main__.py  services.py
src/dcsbridge/dataloaders/: __init__.py  combatflite.py  file.py  scratchpad.py
src/dcsbridge/drivers/: f16.py
src/dcsbridge/resources/aerodromes/: Caucasus.csv  Mariana.csv
test/: test_dataloader.py  test_driver_f16.py  test_main.py  test_scratchpad.py
test/resources/: TestData-Columns.csv  TestData-Minimum.csv  TestData-Minimum.xlsx  TestData-Multiple-Complex-0000.txt  TestData-Multiple-Complex-With-Bingo-0000.txt  TestData-Scratchpad-Mission-Plan.txt  TestData-Scratchpad-Multiple-Formats.txt  TestData-Single-0000.txt
tests/: test_dataloader.py  test_driver_f16.py  test_main.py  test_scratchpad.py
tests/resources/: TestData-Multiple-Complex-0000.txt  TestData-Multiple-Complex-With-Bingo-0000.txt  TestData-Scratchpad-Aerodrome.txt  TestData-Scratchpad-No-Meter.txt  TestData-Single-0000.txt  TestData-Single-CMD-0000.txt
