[tool.poetry]
name = "dcsbridge"
version = "1.2.0-dev"
description = "Bridging the gap between supporting tools and DCS, Virtual Reality and the Real World."
authors = ["Dusty <dusty61ytsud@gmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
