[tool.poetry]
name = "dcsbridge"
version = "1.2.3-dev"
description = "Bridging the gap between supporting tools and DCS, Virtual Reality and the Real World."
authors = ["Dusty <dusty61ytsud@gmail.com>"]
license = "GPL 3.0"

packages = [
    { include = "dcsbridge", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
black = "^21.12b0"
shiv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]
force_grid_wrap = 0

[tool.black]
target-version = ['py39']
line-length = 120
force-exclude = '''
.*/setup\.py$
'''

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
